tests/snapshots/codegen__.__test__variable.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ int a; a=3; a; }) => 3\n({ int a=3; a; }) => 3\n({ int a=3; int z=5; a+z; }) => 8\n({ int a=3; a; }) => 3\n({ int a=3; int z=5; a+z; }) => 8\n({ int a; int b; a=b=3; a+b; }) => 6\n({ int foo=3; foo; }) => 3\n({ int foo123=3; int bar=5; foo123+bar; }) => 8\n({ int x; sizeof(x); }) => 4\n({ int x; sizeof x; }) => 4\n({ int *x; sizeof(x); }) => 8\n({ int x[4]; sizeof(x); }) => 16\n({ int x[3][4]; sizeof(x); }) => 48\n({ int x[3][4]; sizeof(*x); }) => 16\n({ int x[3][4]; sizeof(**x); }) => 4\n({ int x[3][4]; sizeof(**x) + 1; }) => 5\n({ int x[3][4]; sizeof **x + 1; }) => 5\n({ int x[3][4]; sizeof(**x + 1); }) => 4\n({ int x=1; sizeof(x=2); }) => 4\n({ int x=1; sizeof(x=2); x; }) => 1\ng1 => 0\n({ g1=3; g1; }) => 3\n({ g2[0]=0; g2[1]=1; g2[2]=2; g2[3]=3; g2[0]; }) => 0\n({ g2[0]=0; g2[1]=1; g2[2]=2; g2[3]=3; g2[1]; }) => 1\n({ g2[0]=0; g2[1]=1; g2[2]=2; g2[3]=3; g2[2]; }) => 2\n({ g2[0]=0; g2[1]=1; g2[2]=2; g2[3]=3; g2[3]; }) => 3\nsizeof(g1) => 4\nsizeof(g2) => 16\n({ char x=1; x; }) => 1\n({ char x=1; char y=2; x; }) => 1\n({ char x=1; char y=2; y; }) => 2\n({ char x; sizeof(x); }) => 1\n({ char x[10]; sizeof(x); }) => 10\n({ int x=2; { int x=3; } x; }) => 2\n({ int x=2; { int x=3; } int y=4; x; }) => 2\n({ int x=2; { x=3; } x; }) => 3\n({ int x; int y; char z; char *a=&y; char *b=&z; b-a; }) => 7\n({ int x; char y; int z; char *a=&y; char *b=&z; b-a; }) => 1\nOK\n"
status: 0
